fix alignment on mobile

--- a/style.css
+++ b/style.css
@@ -44,8 +44,6 @@ html, body {
     overflow: hidden;
     position: relative;
     margin-top: 50px;
-    padding: 0 20px;
-    box-sizing: border-box;
 }
 
 .carousel-container {
@@ -75,7 +73,8 @@ html, body {
 }
 
 .carousel-item:nth-child(odd) {
-    /* You can add styles for odd items here if needed */
+    
+ 
 }
 
 .carousel-item.highlight {
@@ -83,7 +82,6 @@ html, body {
     z-index: 2;
     border-color: #fff;
 }
-
 .carousel-item:nth-child(3) { 
     transform: scale(1.1); 
     z-index: 2;
@@ -150,6 +148,7 @@ html, body {
     }
 }
 
+
 .up {
     animation: moveUp 6s cubic-bezier(0.5, 0, 0.5, 1) forwards;
 }
@@ -157,3 +156,25 @@ html, body {
 .down {
     animation: moveDown 6s cubic-bezier(0.5, 0, 0.5, 1) forwards;
 }
+
+
+
+@media (max-width: 768px) {
+    .testimonial-heading-section h2 {
+        font-size: 28px;
+    }
+    .testimonial-section {
+       
+        box-sizing: border-box;
+    }
+
+    .testimonial-heading-section p {
+        font-size: 14px;
+        
+    }
+
+   
+
+   
+
+  
